mk-oracle: switch to service name from SID
Change-Id: I20e62f5408c41de51dcc7ea3d432f07c1fd00c82

--- a/packages/mk-oracle/references/oracle_config_v2.yml
+++ b/packages/mk-oracle/references/oracle_config_v2.yml
@@ -59,7 +59,7 @@ oracle:
       include: ["foo", "bar", "inst1"] # optional
       exclude: ["baz"] # optional
     instances: # optional
-      - sid: "INST1" # mandatory
+      - service_name: "INST1" # mandatory
         authentication: # optional, if absent will use main
         connection: # optional, is absent will use main
         alias: myservicename # optional, default: empty. Is used as TNS alias to overwrite sid and connection config
