Depoly bom via bazel
CMK-27396

Change-Id: I236c036a313a95b0180ea25707f0f274ef20706f

--- a/omd/BUILD
+++ b/omd/BUILD
@@ -393,6 +393,8 @@ run_binary(
 pkg_tar(
     name = "license_info",
     srcs = [
+        # ToDo: Build BOM in the same Workspace
+        "bill-of-materials.csv",
         "bill-of-materials.json",
         ":build_bom_texts_pdf",
         ":generate_bom_csv",
