Deploy hash file via bazel
CMK-27396

Change-Id: I53b3bfe830f174a963b4998bfce749226b1c6345

--- a/.bazelrc
+++ b/.bazelrc
@@ -2,6 +2,9 @@
 common --registry="file:///%workspace%/bazel/thirdparty"
 common --registry=https://bcr.bazel.build
 
+# Add git hash to workspace status 
+build --workspace_status_command=bazel/tools/workspace_status.sh
+
 # Add mirrors for certain download URLs
 common --downloader_config=bazel_downloader.cfg
 
