ci: add component test for oracle patch test
run script is responsible for the env var, CI provides only password
also fixed potentially flaky test: may me red if we have concurrent access to the DB

Change-Id: I97dfcac9a29f2c5297b36641ed598c82b1201daf

--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -770,9 +770,9 @@ STAGES:
       ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_MK_ORACLE_FILES
       SEC_VAR_LIST:
           - "CI_TEST_SQL_DB_ENDPOINT"
-          - "CI_ORA2_DB_TEST"
+          - "CI_ORA2_DB_TEST_PASSWORD"
       DIR: "packages/mk-oracle"
-      COMMAND: "./run --build --unit-tests --lint=all &> ${RESULTS}/mk-oracle.txt"
+      COMMAND: "./run --build --unit-tests --component-tests --lint=all &> ${RESULTS}/mk-oracle.txt"
       BAZEL_LOCKS_AMOUNT: 1
       TEXT_ON_SKIP: "No mk-oracle files changed"
       RESULT_CHECK_FILE_PATTERN: "results/mk-oracle.txt"
