Include qa-test-data pre-commit check
This will avoid the qa-test-data submodule gitlink to be updated by
accident.

Change-Id: Ifa6359a732c706d75ed5c4145f9a60870421cd6b

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -149,3 +149,7 @@ repos:
             files: pyproject.toml
             verbose: true
             require_serial: true
+          - id: qa-test-data submodule
+            name: Check qa-test-data submodule commit-id is not updated
+            entry: scripts/check-qa-test-data
+            language: script
