move secrets file
CMK-28330

Change-Id: Iecbb1f53ee2dec90930407c50cd95543e5e64a2f

--- a/packages/cmk-check-engine/BUILD
+++ b/packages/cmk-check-engine/BUILD
@@ -55,13 +55,13 @@ py_library(
     srcs = [
         "cmk/fetchers/__init__.py",
         "cmk/fetchers/_abstract.py",
-        "cmk/fetchers/_ad_hoc_secrets.py",
         "cmk/fetchers/_agentprtcl.py",
         "cmk/fetchers/_ipmi.py",
         "cmk/fetchers/_metric_backend.py",
         "cmk/fetchers/_nofetcher.py",
         "cmk/fetchers/_piggyback.py",
         "cmk/fetchers/_program.py",
+        "cmk/fetchers/_secrets.py",
         "cmk/fetchers/_snmp.py",
         "cmk/fetchers/_snmpscan.py",
         "cmk/fetchers/_tcp.py",
