wa: prevent packaging not required files
CMK-26741

Change-Id: Ie14a34f91d57008c5d2ad5bb90f551846df6083c

--- a/agents/windows/plugins/BUILD
+++ b/agents/windows/plugins/BUILD
@@ -9,6 +9,9 @@ filegroup(
         ["**"],
         exclude = [
             "BUILD",
+            "reference/**",
+            "scripts/**",
+            ".gitattributes",
             "**/OWNERS",
             ".f12",
         ],
