Fixup cache key for GA
The key was set by `runner.os`, which is always `linux`.
What we want insead is the name of the distro provided by
https://github.com/actions/runner-images/pull/407/changes/8023952876705ac8f55f171dc11226e3a2ae6445

Change-Id: I6c878c41240fd96acb57d00454dcc7e301a17cf3

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -46,7 +46,7 @@ jobs:
     - name: Cache uv
       uses: actions/cache@v3
       with:
-        key: uv-${{ runner.os }}-${{ hashFiles('requirements_all_lock.txt') }}
+        key: uv-$ImageOS-${{ hashFiles('requirements_all_lock.txt') }}
         path: ${{ env.UV_CACHE_DIR  }}
     - name: Setup Environment
       run: |
