update vue-tsc to 3.1.8
temporary disable some vuejs typescript compiler options

Change-Id: I636f6f7b2ad1c784112302136ce03578f2738f94

--- a/packages/cmk-frontend-vue/tsconfig.app.json
+++ b/packages/cmk-frontend-vue/tsconfig.app.json
@@ -107,8 +107,5 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "vueCompilerOptions": {
-    "strictTemplates": true,
-    "fallthroughAttributes": true
-  }
+  "vueCompilerOptions": {}
 }
