fix missing manpages
In cases of non-free only manpages, they can be
found under `…/checkman/nonfree/ultimate/my_plugin`.

Change-Id: I02006c9a090ba63233c0264825730844f42921c1

--- a/cmk/BUILD
+++ b/cmk/BUILD
@@ -158,7 +158,7 @@ filegroup(
     name = "checkman",
     srcs = glob(
         [
-            "**/checkman/*",
+            "**/checkman/**",
         ],
         exclude = ["**/OWNERS"],
     ),
