Remove trailing comma from dependency list
Change-Id: Id1e7fb810c55d62ff78e6fa372b755eb87f9c37f

--- a/omd/distros/BUILD
+++ b/omd/distros/BUILD
@@ -17,7 +17,7 @@ genrule(
     ),
     outs = ["dependencies.txt"],
     cmd = """
-            grep -e "^OS_PACKAGES\\s\\++" $< | sed 's/^OS_PACKAGES\\s\\++=\\s\\([^[:space:]]*\\).*/\\1/' | tr '\n\r' ', ' > $@
+            grep -e "^OS_PACKAGES\\s\\++" $< | sed 's/^OS_PACKAGES\\s\\++=\\s\\([^[:space:]]*\\).*/\\1/' | tr '\n\r' ',' | sed 's/,$$//' > $@
         """,
     visibility = ["//omd:__pkg__"],
 )
