feat: download relay script static endpoint without auth
Change-Id: I407e1948aefa6a692272dfa876e8c0447d15610f

--- a/omd/packages/check_mk/skel/etc/check_mk/apache.conf
+++ b/omd/packages/check_mk/skel/etc/check_mk/apache.conf
@@ -23,6 +23,14 @@ Alias /###SITE###/check_mk/agents ###ROOT###/share/check_mk/agents
   allow from all
 </Directory>
 
+# This shares the relay installation script via HTTP
+Alias /###SITE###/check_mk/relays ###ROOT###/share/check_mk/relays
+<Directory ###ROOT###/share/check_mk/relays>
+  Options +Indexes
+  Order deny,allow
+  allow from all
+</Directory>
+
 # Handle locally installed files via the internal URI /###SITE###/check_mk/local
 # These are files stored below local/share/check_mk/web/htdocs
 Alias /###SITE###/check_mk/local ###ROOT###/local/share/check_mk/web/htdocs
