--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -12,13 +12,14 @@ on: [push, pull_request]
 
 jobs:
   testing:
-    runs-on: ubuntu-24.04
+    runs-on: ${{ matrix.os }}
     env:
       PIPENV_IGNORE_VIRTUALENVS: 1
       USE_EXTERNAL_PIPENV_MIRROR: true
       PYTHONWARNINGS: ignore:DeprecationWarning
     strategy:
       matrix:
+        os: [ubuntu-24.04]
         include:
         - name: Bandit tests
           target: test-bandit
@@ -49,12 +50,12 @@ jobs:
     - name: Cache pip
       uses: actions/cache@v3
       with:
-        key: pip-$ImageOS-${{ hashFiles('Pipfile.lock') }}
+        key: pip-${{ matrix.os }}-${{ hashFiles('Pipfile.lock') }}
         path: ${{ env.PIP_CACHE_DIR  }}
     - name: Cache pipenv
       uses: actions/cache@v3
       with:
-        key: pipenv-$ImageOS-${{ hashFiles('Pipfile.lock') }}
+        key: pipenv-${{ matrix.os }}-${{ hashFiles('Pipfile.lock') }}
         path: ${{ env.PIPENV_CACHE_DIR  }}
     - name: Setup Environment
       run: |
