--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -12,11 +12,12 @@ on: [push, pull_request]
 
 jobs:
   testing:
-    runs-on: ubuntu-24.04
+    runs-on: ${{ matrix.os }}
     env:
       PYTHONWARNINGS: ignore:DeprecationWarning
     strategy:
       matrix:
+        os: [ubuntu-24.04]
         include:
         - name: Bandit tests
           target: test-bandit
@@ -46,7 +47,7 @@ jobs:
     - name: Cache uv
       uses: actions/cache@v3
       with:
-        key: uv-$ImageOS-${{ hashFiles('requirements_all_lock.txt') }}
+        key: uv-${{ matrix.os }}-${{ hashFiles('requirements_all_lock.txt') }}
         path: ${{ env.UV_CACHE_DIR  }}
     - name: Setup Environment
       run: |
