Strip prefix now changes the root folder instead of adding a prefix
In case the previous rule already added a prefix,
stripping both prefixes becomes impossible.
Adding prefixes is simple.

CMK-27396

Change-Id: I3a0a52363fba1511a846be496f61a2abaaedbc0f

--- a/omd/packages/pnp4nagios/BUILD
+++ b/omd/packages/pnp4nagios/BUILD
@@ -87,6 +87,7 @@ pkg_files(
     name = "lib_pkg",
     srcs = [":lib_with_omdroot_filegroup"],
     attributes = pkg_attributes(mode = "0755"),
+    prefix = "lib",
     strip_prefix = strip_prefix.from_pkg("lib_with_omdroot_filegroup"),
     tags = ["manual"],
 )
