astrein: Integrate with bazel_rules_lint
Lint specific target as human:

bazel lint //cmk:lib_cmk_repo

Lint as machine:

bazel lint --machine //cmk:lib_cmk_repo

Only targets with "lint-with-astrein" tag are linted.

Change-Id: If47e5bf7cf034c8c40fbe219f89a516f490305b0

--- a/cmk/BUILD
+++ b/cmk/BUILD
@@ -311,6 +311,7 @@ py_library(
     srcs = glob(["**/*.py"]),
     data = ["gui/wsgi/applications/index.wsgi"],
     imports = [".."],
+    tags = ["lint-with-astrein"],
     visibility = [
         "//doc/plugin-api:__pkg__",
         "//tests/unit:__pkg__",
