--- a/.aspect/cli/config.yaml
+++ b/.aspect/cli/config.yaml
@@ -1,4 +1,6 @@
+---
 lint:
   aspects:
-    - //bazel/tools:aspects.bzl%ruff
+    - //bazel/tools:aspects.bzl%astrein
     - //bazel/tools:aspects.bzl%clang_tidy
+    - //bazel/tools:aspects.bzl%ruff
