Do not strip binaries
Change-Id: If23266940e6eadb58c8267295d0e1a3178d8cfc0

--- a/omd/Makefile
+++ b/omd/Makefile
@@ -26,8 +26,7 @@ BOM := bill-of-materials.json
 .PHONY: install cma rpm deb clean install-clean venv
 
 # Called while building the .rpm/.deb packages
-install: $(INSTALL) $(DEPS_INSTALL_BAZEL)
-	python3 ./strip_binaries --exclude cmk-agent-ctl --exclude mk-sql --exclude cmc --exclude waitmax --exclude agent_modbus $(DESTDIR)$(OMD_ROOT)/
+install: $(INSTALL_GLOBAL) $(DEPS_INSTALL_BAZEL)
 
 # Called by our release system to build appliance packages
 cma: $(CMA_PACKAGE)
