Fix python sysconfig filepattern
Change-Id: I3a705d1bb0a704977ed2fbd36959a673455d722d

--- a/omd/packages/Python/BUILD
+++ b/omd/packages/Python/BUILD
@@ -201,7 +201,7 @@ string_replace(
     },
     replace_pattern = "/replace-me",
     tags = ["manual"],
-    value = "/omd/versions/{cmk_version}.{cmk_edition}",
+    value = "/opt/omd/versions/{cmk_version}.{cmk_edition}",
 )
 
 pkg_files(
