Wrap additional executables to use system OpenSSL
The following has been tested on 2.4.0p18, and is being temporarily ported forward until CMK-28421 is completed.

See:

SUP-26879
CMK-28524

Change-Id: I0edcc50e01290e362fea5cd03b5d3e183f4e2e0c

--- a/omd/packages/omd/BUILD
+++ b/omd/packages/omd/BUILD
@@ -37,16 +37,26 @@ pkg_files(
 
 # SUP-10161: our openssl is incompatible with some system executables on various sles15sp*
 # SUP-26565: Getting an exception error when baking agent almalinux-9+
+# SUP-26879: Wrap other tools commonly used by users that require linking to the system openssl
 # etc.
 WRAPPED_EXECUTABLES = [
-    "ssh",
-    "scp",
-    "pdftoppm",
     "curl",
-    "zypper",
-    "rpmbuild",
+    "dig",
+    "host",
+    "nc",
+    "nmap",
     "nslookup",
+    "pdftoppm",
+    "php",
+    "php-cgi",
+    "php5",
+    "php5-cgi",
+    "resolvectl",
+    "rpmbuild",
+    "scp",
+    "ssh",
     "systemctl",
+    "zypper",
 ]
 
 [pkg_files(
