--- a/omd/packages/rrdtool/BUILD
+++ b/omd/packages/rrdtool/BUILD
@@ -3,6 +3,8 @@ load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_fil
 load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 load("//bazel/rules:package_wheel.bzl", "package_wheel")
 
+exports_files(["skel.permissions"])
+
 rrd_cli_tools = [
     "rrdtool",
     "rrdcached",
